crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_path-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Path {
        segments: [
            Segment {
                ident: "T",
                generic_args: [
                    Path {
                        segments: [
                            Segment {
                                ident: "A",
                                generic_args: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
