crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_path-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Path {
        segments: [
            Segment {
                ident: "T",
                generic_args: [],
            },
            Segment {
                ident: "A",
                generic_args: [
                    Path {
                        segments: [
                            Segment {
                                ident: "B",
                                generic_args: [],
                            },
                        ],
                    },
                ],
            },
            Segment {
                ident: "C",
                generic_args: [],
            },
        ],
    },
)
