crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_postfix-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Inst(
        Inst {
            cons: Var(
                Var {
                    name: "T",
                },
            ),
            args: [
                Var(
                    Var {
                        name: "A",
                    },
                ),
            ],
        },
    ),
)
