crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_postfix-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Field(
        Field {
            ty: Inst(
                Inst {
                    cons: Field(
                        Field {
                            ty: Var(
                                Var {
                                    name: "T",
                                },
                            ),
                            name: "A",
                        },
                    ),
                    args: [
                        Var(
                            Var {
                                name: "B",
                            },
                        ),
                    ],
                },
            ),
            name: "C",
        },
    ),
)
