crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_postfix.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Field(
        Field {
            ty: Var(
                Var {
                    name: "T",
                },
            ),
            name: "A",
        },
    ),
)
