crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_tuple-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Tuple(
        Tuple {
            items: [
                Var(
                    Var {
                        name: "A",
                    },
                ),
                Var(
                    Var {
                        name: "B",
                    },
                ),
                Var(
                    Var {
                        name: "C",
                    },
                ),
            ],
        },
    ),
)
